style improvements and logo improvements and bug fixes for 404 page alignment and gmaps load order

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -101,7 +101,7 @@ main {
 header {
     position: sticky;
     top: 0;
-    z-index: 10;
+    z-index: 20;
     background-color: #ffffffe0;
     @include fonts.sans(1rem, 400, normal);
 }
@@ -145,6 +145,7 @@ nav {
 
     details {
         flex: 0 1 20ch;
+        min-width: fit-content;
 
         >* {
             list-style: none;
@@ -198,8 +199,9 @@ section>div {
     text-align: center;
 
     p {
-        margin: 1rem auto;
-        text-wrap: balance;
+        margin: 0 auto;
+        text-align: justify;
+        hyphens: auto;
         line-height: initial;
     }
 
@@ -217,7 +219,7 @@ section>div {
         right: 0;
         bottom: 0;
         left: 0;
-        background: radial-gradient(ellipse closest-side, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0) 50%, black 100%);
+        background: radial-gradient(ellipse closest-side, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.25) 50%, black 100%);
     }
 }
 
@@ -425,7 +427,6 @@ table:has(+p) {
 }
 
 button {
-    background-color: transparent;
     min-width: fit-content;
 }
 
@@ -501,6 +502,7 @@ button {
         z-index: 10;
         margin-right: auto;
         padding: 4px;
+        @include fonts.sans(1rem, 500, normal);
 
         button {
             position: sticky;
@@ -510,6 +512,10 @@ button {
         li {
             list-style: none;
             line-height: 150%;
+        }
+
+        a {
+            text-decoration: none;
         }
 
         a.before {
